[ENG-2789] Use correct alignment for price on tablets (#290)

--- a/src/components/AppQuoteDetailPage/index.scss
+++ b/src/components/AppQuoteDetailPage/index.scss
@@ -145,7 +145,7 @@
   .mobile-length {
     display: none;
 
-    @include tablet() {
+    @include phone() {
       display: block;
     }
   }
@@ -153,7 +153,7 @@
   .desktop-length {
     display: block;
 
-    @include tablet() {
+    @include phone() {
       display: none;
     }
   }
